# PrivyBags

./: .gitignore  Anchor.toml  README.md  check_pda.js  check_vault.ts  package.json  pnpm-lock.yaml
app/: components.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/api/bags/creator/: route.ts
app/src/app/dashboard/: page.tsx
app/src/app/tip/[creatorSlug]/: page.tsx
app/src/components/creator/: CreatorCard.tsx  CreatorSearch.tsx
app/src/components/dashboard/: FeeShareConfig.tsx  NotificationBell.tsx  TipStats.tsx
app/src/components/layout/: Navbar.tsx
app/src/components/tip/: PrivateTipForm.tsx  TipConfirmation.tsx
app/src/components/ui/: PrivacyBadge.tsx  SplashScreen.tsx  TxStatus.tsx  globe.tsx
app/src/components/wallet/: WalletConnect.tsx
app/src/hooks/: useBagsCreator.ts  useCreatorDashboard.ts  usePrivateTip.ts
app/src/lib/: constants.ts
app/src/lib/anchor/: privybag-client.ts
app/src/lib/anchor/idl/: privybag.json
app/src/lib/bags/: client.ts
app/src/lib/light/: connection.ts  shielded-transfer.ts
app/src/providers/: NotificationProvider.tsx  SplashProvider.tsx  WalletProvider.tsx
app/src/styles/: globals.css
programs/privybag/: Cargo.toml
programs/privybag/src/: errors.rs  lib.rs
programs/privybag/src/instructions/: claim_private_share.rs  configure_fee_share.rs  deposit.rs  initialize_vault.rs  mod.rs  shielded_tip.rs  withdraw.rs
programs/privybag/src/state/: creator_vault.rs  fee_share_config.rs  mod.rs
tests/: privybag.ts
(+1 files in other folders)
