[package]
name = "privybag"
version = "0.1.0"
description = "PrivyBag — ZK-shielded tipping and fee sharing for Bags.fm creators"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privybag"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token", "token_2022"] }

# Light Protocol V2 — CRITICAL: include "v2" feature explicitly.
# Specifying any features list disables Cargo defaults, so "v2" must be listed.
# Without it, add_system_accounts_v2 and cpi::v2 are unavailable.
light-sdk    = { version = "0.17.1", features = ["anchor", "v2"] }
light-hasher = "5.0.0"


